deploy/k8s/app/interaction-outbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interaction-outbox
  namespace: freeexchanged
spec:
  revisionHistoryLimit: 3
  replicas: 2
  selector:
    matchLabels:
      app: interaction-outbox
  template:
    metadata:
      labels:
        app: interaction-outbox
    spec:
      containers:
      - name: interaction-outbox
        image: freeexchanged/interaction-outbox:v0.1.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: config
          mountPath: /app/etc
      volumes:
      - name: config
        configMap:
          name: interaction-outbox-config
