deploy/k8s/app/ranking-stream.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ranking-stream
  namespace: freeexchanged
spec:
  revisionHistoryLimit: 3
  replicas: 3
  selector:
    matchLabels:
      app: ranking-stream
  template:
    metadata:
      labels:
        app: ranking-stream
    spec:
      containers:
      - name: ranking-stream
        image: freeexchanged/ranking-stream:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: config
          mountPath: /app/etc
      volumes:
      - name: config
        configMap:
          name: ranking-stream-config
