deploy/k8s/app/article-outbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-outbox
  namespace: freeexchanged
spec:
  revisionHistoryLimit: 3
  replicas: 2
  selector:
    matchLabels:
      app: article-outbox
  template:
    metadata:
      labels:
        app: article-outbox
    spec:
      containers:
      - name: article-outbox
        image: freeexchanged/article-outbox:v0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: metrics
          containerPort: 9099
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: config
          mountPath: /app/etc
      volumes:
      - name: config
        configMap:
          name: article-outbox-config
---
apiVersion: v1
kind: Service
metadata:
  name: article-outbox-svc
  namespace: freeexchanged
spec:
  selector:
    app: article-outbox
  ports:
  - name: metrics
    port: 9099
    targetPort: 9099
