deploy/k8s/app/ranking-rpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ranking-rpc
  namespace: freeexchanged
spec:
  revisionHistoryLimit: 3
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: ranking-rpc
  template:
    metadata:
      labels:
        app: ranking-rpc
    spec:
      containers:
      - name: ranking-rpc
        image: freeexchanged/ranking-rpc:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: grpc
          containerPort: 8082
        - name: metrics
          containerPort: 9094
        readinessProbe:
          tcpSocket:
            port: grpc
          initialDelaySeconds: 8
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: grpc
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: config
          mountPath: /app/etc
      volumes:
      - name: config
        configMap:
          name: ranking-rpc-config
---
apiVersion: v1
kind: Service
metadata:
  name: ranking-rpc-svc
  namespace: freeexchanged
spec:
  selector:
    app: ranking-rpc
  ports:
  - name: grpc
    port: 8082
    targetPort: 8082
  - name: metrics
    port: 9094
    targetPort: 9094
