deploy/k8s/app/user-rpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-rpc
  namespace: freeexchanged
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-rpc
  template:
    metadata:
      labels:
        app: user-rpc
    spec:
      containers:
      - name: user-rpc
        image: freeexchanged/user-rpc:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: grpc
          containerPort: 8080
        - name: metrics
          containerPort: 9092
        volumeMounts:
        - name: config
          mountPath: /app/etc
      volumes:
      - name: config
        configMap:
          name: user-rpc-config
---
apiVersion: v1
kind: Service
metadata:
  name: user-rpc-svc
  namespace: freeexchanged
spec:
  selector:
    app: user-rpc
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
  - name: metrics
    port: 9092
    targetPort: 9092
