deploy/k8s/app/watchlist-rpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchlist-rpc
  namespace: freeexchanged
spec:
  replicas: 2
  selector:
    matchLabels:
      app: watchlist-rpc
  template:
    metadata:
      labels:
        app: watchlist-rpc
    spec:
      containers:
      - name: watchlist-rpc
        image: freeexchanged/watchlist-rpc:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: grpc
          containerPort: 8085
        - name: metrics
          containerPort: 9097
        volumeMounts:
        - name: config
          mountPath: /app/etc
      volumes:
      - name: config
        configMap:
          name: watchlist-rpc-config
---
apiVersion: v1
kind: Service
metadata:
  name: watchlist-rpc-svc
  namespace: freeexchanged
spec:
  selector:
    app: watchlist-rpc
  ports:
  - name: grpc
    port: 8085
    targetPort: 8085
  - name: metrics
    port: 9097
    targetPort: 9097
